--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    restart: always
+    restart: unless-stopped
     image: "postgres:12.3-alpine"
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
@@ -15,7 +15,7 @@ services:
       - rengine_network
 
   redis:
-    restart: always
+    restart: unless-stopped
     image: "redis:alpine"
     hostname: redis
     networks:
@@ -24,7 +24,7 @@ services:
   celery:
     build:
       context: ./web
-    restart: always
+    restart: unless-stopped
     entrypoint: /usr/src/app/celery-entrypoint.sh
     # command: celery -A reNgine worker --autoscale=${MAX_CONCURRENCY},${MIN_CONCURRENCY} -l INFO
     volumes:
@@ -84,7 +84,7 @@ services:
     build:
       context: ./web
     entrypoint: /usr/src/app/entrypoint.sh
-    restart: always
+    restart: unless-stopped
     image: docker.pkg.github.com/yogeshojha/rengine/rengine:latest
     environment:
       - DEBUG=0
@@ -118,7 +118,7 @@ services:
           - rengine
 
   proxy:
-    restart: always
+    restart: unless-stopped
     image: nginx:alpine
     ports:
       - 8082:8082/tcp
